# lyricbot

./: Cargo.toml  build.rs  readme.md  rust-toolchain.toml
.github/workflows/: release.yml
src/: error.rs  lib.rs  main.rs  profile.proto  profile.rs
src/tui/: mod.rs
src/tui/views/: confirmation.rs  counter.rs  mod.rs  prelude.rs
